apps/test/website/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website
spec:
  routes:
    - match: Host(`test.oikz.dev`)
      kind: Rule
      services:
        - name: test-website
          port: 8080
